--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ virtualenv:
   system_site_packages: true
 
 before_install:
+  - pip install -r requirements.txt
   - pip install flake8
 
 script: flake8 -v *.py
