--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,8 @@ virtualenv:
 before_install:
   - pip install -r requirements.txt
   - pip install flake8
-  - wget http://tidy.sourceforge.net/trt/tidy_mklinux.tgz
-  - tar -zxvf tidy_mklinux.tgz
+  - sudo apt-get install tidy
 
 script:
-  - ls
   - flake8 -v *.py
   - tidy omero_downloads.html
