--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ virtualenv:
   system_site_packages: true
 
 before_install:
-  - pip install flake8
+  - pip install flake8 pep8==1.5.7
   - sudo apt-get install tidy
 
 script:
